Add Team Mode feature
- Toggle between single player and team mode
- Support 2-8 teams with auto-assignment
- Mobile-friendly UI with responsive design
- Team-specific colors for visual distinction

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,14 @@
 			Make all players put one finger on the screen. After 2 seconds one
 			player is chosen at random.
 		</p>
+		<div id="controls">
+			<button id="team-mode-toggle">Team Mode</button>
+			<div id="team-count-label">
+				Teams: <span id="team-count">2</span>
+				<button id="team-minus">-</button>
+				<button id="team-plus">+</button>
+			</div>
+		</div>
 		<div
 			id="live-region"
 			aria-live="assertive"
