no double tap zoom

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta
 			name="viewport"
-			content="width=device-width, initial-scale=1, user-scalable=no"
+			content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0"
 		/>
 		<title>Player Chooser</title>
 		<link rel="manifest" href="manifest.webmanifest" />
